# DPC

./: .gitignore  README.md  export_env.sh  readme.txt  test.sh
exercise01/: CMakeLists.txt
exercise02/: CMakeLists.txt  main.cpp  rd_kernel.cu  rd_kernel.h
miro/: BLPatch.cpp  BLPatch.h  BVH.cpp  BVH.h  BuildScenes.cpp  BuildScenes.h  CMakeLists.txt  Camera.cpp  Camera.h  Clock.cpp  Clock.h  EnvMapMaterial.cpp  EnvMapMaterial.h  FinalPassKernel.cu  FinalPassKernel.h  GlossyHighlights.cpp  GlossyHighlights.h  HashGrid.cpp  HashGrid.h  Image.h  Lambert.cpp  Lambert.h  Makedefs  Makefile  Material.cpp  Material.h  Matrix4x4.h  Miro.h  Object.h  OpenGL.h  PFMLoader.h  PhotonPassKernel.cu  PhotonPassKernel.h  Plane.cpp  Plane.h  PointLight.h  README.md  Ray.h  Scene.cpp  Scene.h  (+22 more)
msd/: CMakeLists.txt  Report.txt  main.cu  simpleGL_kernel.cu
